# test_plotly

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  pyproject.toml
src/: app.py
src/config/: __init__.py
src/infrastructure/application/: __init__.py  factory.py
src/presentation/blueprints/: __init__.py  main_blueprint.py
src/presentation/callback/: __init__.py  callback.py
src/presentation/layout/: layout.py
